Fixing in the H1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <main>
         <article>
-            <h1>A melhores refeições e sobremesas do seu Bairro</h1>
+            <h1>As melhores refeições e sobremesas do seu Bairro</h1>
             <br>
             <h2>Refeições Completas</h2>
             <div class="separador-conteudo-refeicoes"></div>            
